# preprof

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  configure.ac  expect.h  lockprof.c  log.c  log.h  logdump.c  pirate.c  pirate.h  preprof.c  preprof.sh  process.c  process.h  pthread_trace.c  tsc.h  utils.c  utils.h  vect.h
test/: Makefile  test_lockprof.c  test_lockprof.sh
